--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   file_picker: ^8.0.5
   intl: ^0.19.0
   table_calendar: ^3.0.6
+  multi_select_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
